# Carbon--Decentralized-Physics-AI

./: Implementation.md  Launch_Spec.md  Nemotron_Feedback.md  README.md  ReadMe.md  SPEC.md  STRATEGY.md  Sepc.md  TRUSTLESS_VERIFICATION_AND_DATA_GENERATION.md  docker-compose.yml  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
Appendices/: B.md  C.md  E.md  SIBR.md
appendices/: Compute_Optimization.md  Data_Management.md  JAX_Optimization.md  Operations.md
docker/miner/: .env.example  Dockerfile  README.md  entrypoint.sh
docker/validator/: Dockerfile
docs/: AGENT_USAGE.md  DATA_STRATEGY.md  DETERMINISM_DESIGN.md  EMISSIONS.md  FUTURE_DOMAINS.md  IMPLEMENTATION_STATUS.md  STRESS_TEST_DESIGN.md
examples/: llm_agent_prompt.md  mcp_client_example.py
hydrogen/: __init__.py
hydrogen/backbones/: __init__.py  neural_operator.py  physicsnemo.py  registry.py
hydrogen/base/: miner.py  neuron.py
hydrogen/challenges/: __init__.py  burgers.py  elasticity_2d.py  heat.py  navier_stokes_2d.py  poisson_2d.py
hydrogen/data/: __init__.py  benchmark_loader.py  download_pdebench.py  pdebench_loader.py
hydrogen/emission/: __init__.py  mechanics.py
hydrogen/evaluation/: __init__.py  plan.py
hydrogen/landscape/: __init__.py  agent.py  causal_knowledge_base.py
hydrogen/miner/: agent_tools.py  mcp_server.py  strategy_generator.py
hydrogen/physics/: gates.py  stress.py
hydrogen/specialist/: bank.py  distillation.py
hydrogen/symbolic/: __init__.py  pysr_evolver.py
hydrogen/training/: physicsnemo_trainer.py  trainer.py
k8s/: README.md  validator-deployment.yaml  validator-service.yaml
neurons/: miner.py  validator.py
neurons/scoring/: hydrogen_scorer.py
neurons/stress/: __init__.py  base_generator.py  procedural_generator.py  well_generator.py
neurons/symbolic/: __init__.py  extractor.py  symbolic_models.py
scripts/: local_validate.py
tests/: test_reproducibility.py
validator_private/: README.md
