[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrogen-subnet"
version = "0.1.0"
description = "Bittensor subnet for physics-informed neural operators with causal + symbolic intelligence (Hydrogen)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "jbequ5 / Hydrogen contributors"}]
license = {text = "AGPL-3.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "bittensor>=6.0.0",
    "torch>=2.3.0",
    "numpy>=1.26",
    "scipy",
    "pandas",
    "pyyaml",
    "tqdm",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy", "pre-commit"]
miner = ["bittensor"]
validator = ["bittensor", "torch"]

[project.scripts]
hydrogen-miner = "hydrogen.miner.cli:main"
hydrogen-validator = "hydrogen.validator.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
